--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.7" # make sure this is the latest version
+tts = "0.21.1"
 
 # Enable only a small amount of optimization in debug mode
 [profile.dev]
